[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/actors/enemies/crawlers/EnemyCrawler.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/sfx/sfx_sounds_impact1.wav" type="AudioStream" id=3]

[node name="EnemyCrawler" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 19
script = ExtResource( 2 )

[node name="HitArea" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea" index="0"]

[node name="Raycasts" type="Node2D" parent="." index="4"]

[node name="RayLeft" type="RayCast2D" parent="Raycasts" index="0"]
enabled = true
cast_to = Vector2( 0, 32 )

[node name="RayRight" type="RayCast2D" parent="Raycasts" index="1"]
enabled = true
cast_to = Vector2( 0, 32 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="." index="5"]
process_parent = true
physics_process_parent = true

[node name="HitSFX" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 3 )

[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
